MOBI-768 Menu Button wraps long text - wrapping long text fixed by redesigning css so that the button now expands with the text - added default button styling and removed custom menu button cosmetic styling
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@35857 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/android_dark/1_button_ext.scss
+++ b/resources/themes/android_dark/1_button_ext.scss
@@ -90,7 +90,7 @@
     border-radius: 0;
     height: 38px;
     line-height: 22px;
-    box-sizing: border-box;
+    @include border-box;
 }
 .mobi-pagePanel-header div.mobi-button-back {
     height: 23px;
