--- a/resources/themes/archaic/1_menubutton_ext.css
+++ b/resources/themes/archaic/1_menubutton_ext.css
@@ -13,9 +13,3 @@
  * express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
-.mobi-menu-btn-btn {
-    border: 1px solid #175f9d;
-    background-color: #4A6C9B;
-    color: #FFFFFF;
-    width: 106px;
-}
